# claude-code-usage-indicator

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  justfile  linux.just  macos.just
.github/workflows/: release.yml
crates/cc-usage-budget/: Cargo.toml
crates/cc-usage-budget/src/: api.rs  creds.rs  lib.rs  pace.rs
crates/cc-usage-cli/: Cargo.toml
crates/cc-usage-cli/src/: config.rs  creds.rs  main.rs  output.rs
crates/cosmic-applet-cc-usage/: Cargo.toml
crates/cosmic-applet-cc-usage/i18n/en/: cosmic_applet_cc_usage.ftl
crates/cosmic-applet-cc-usage/resources/: dev.fuabioo.CosmicAppletCcUsage.metainfo.xml
crates/cosmic-applet-cc-usage/src/: config.rs  i18n.rs  main.rs
crates/cosmic-applet-cc-usage/src/views/: panel.rs
docs/: cosmic-applet-guide.md  ux-mockup.html
docs/ADR/: 001-project-overview-and-architecture.md  002-data-source-and-budget-calculation.md  003-ux-design-and-visual-layout.md  004-technical-implementation-plan.md
i18n/en/: cosmic_applet_cc_usage.ftl
macos/CcUsageMenuBar/: Package.swift
macos/CcUsageMenuBar/Resources/: Info.plist
macos/CcUsageMenuBar/Sources/CcUsageMenuBar/: DashboardView.swift  DataController.swift  Model.swift  StatusItemController.swift  SwatchRenderer.swift  main.swift
packaging/homebrew/: cc-usage-menubar.rb
resources/: dev.fuabioo.CosmicAppletCcUsage.desktop  dev.fuabioo.CosmicAppletCcUsage.metainfo.xml
src/: app.rs  config.rs  main.rs
src/budget/: api.rs  creds.rs  mod.rs  pace.rs  types.rs
src/views/: mod.rs  panel.rs  popup.rs
