[package]
name = "cosmic-applet-cc-usage"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "COSMIC panel applet for monitoring Claude Code usage budget"

[dependencies]
# COSMIC / GUI
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "59bebbdffeb8ed4abd3f2577c099745b9a2f2c37", features = [
    "applet",
    "applet-token",
    "tokio",
    "wayland",
    "winit",
] }

# Async
tokio = { version = "1", features = ["time"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# i18n
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# Error handling
thiserror = "2"

# Config persistence
ron = "0.12"

[dev-dependencies]
tempfile = "3"
