[workspace]
resolver = "2"
members = [
    "crates/cc-usage-budget",
    "crates/cc-usage-cli",
    "crates/cosmic-applet-cc-usage",
]

# The COSMIC applet (crates/cosmic-applet-cc-usage) only builds on Linux/Wayland.
# Exclude it from default workspace operations so `cargo build`/`cargo test` work
# on macOS; build it explicitly with `-p cosmic-applet-cc-usage` on Linux.
default-members = [
    "crates/cc-usage-budget",
    "crates/cc-usage-cli",
]
