[package]
name = "cc-usage-budget"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reusable Claude Code usage-budget logic: credential reading, usage API client, and pace calculations"

[dependencies]
# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

[dev-dependencies]
tempfile = "3"
