[package]
name = "cc-usage-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-platform CLI for Claude Code usage budget; emits JSON consumed by GUI frontends"

[[bin]]
name = "cc-usage"
path = "src/main.rs"

[dependencies]
# Shared, platform-agnostic budget logic
cc-usage-budget = { path = "../cc-usage-budget" }

# Async runtime for the usage API call
tokio = { version = "1", features = ["rt", "macros", "time"] }

# HTTP client (constructed here, passed into cc-usage-budget)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI args
clap = { version = "4", features = ["derive"] }

# Serialization (JSON output + optional TOML config file)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
