[package]
name = "cosmic-applet-cc-usage"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "COSMIC panel applet for monitoring Claude Code usage budget"

[dependencies]
# Reusable, platform-agnostic budget logic (credentials, usage API, pace math)
cc-usage-budget = { path = "../cc-usage-budget" }

# COSMIC / GUI
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "59bebbdffeb8ed4abd3f2577c099745b9a2f2c37", features = [
    "applet",
    "applet-token",
    "tokio",
    "wayland",
    "winit",
] }

# Async
tokio = { version = "1", features = ["time"] }

# HTTP (applet builds the shared reqwest::Client passed into cc-usage-budget)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# i18n
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# Config persistence
ron = "0.12"
